--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -6,6 +6,7 @@ spring-boot = "3.4.1"
 spring-dependency-management = "1.1.7"
 kotlin-snowfalke = "0.0.5"
 kotlin-serialization = "1.8.0"
+h2-database = "2.3.232"
 
 [libraries]
 # build-logic
@@ -13,16 +14,18 @@ spring-context = { module = "org.springframework:spring-context" }
 kotlin-test-junit5 = { module = "org.jetbrains.kotlin:kotlin-test-junit5" }
 junit-platform-launcher = { module = "org.junit.platform:junit-platform-launcher" }
 kotest-runner-junit5 = { module = "io.kotest:kotest-runner-junit5", version.ref = "kotest" }
-spring-boot-starter = { module = "org.springframework.boot:spring-boot-starter", version.ref = "spring-boot"}
+spring-boot-starter = { module = "org.springframework.boot:spring-boot-starter", version.ref = "spring-boot" }
 spring-boot-starter-web = { module = "org.springframework.boot:spring-boot-starter-web", version.ref = "spring-boot" }
 spring-boot-starter-test = { module = "org.springframework.boot:spring-boot-starter-test", version.ref = "spring-boot" }
 spring-boot-gradle-plugin = { module = "org.springframework.boot:spring-boot-gradle-plugin", version.ref = "spring-boot" }
 kotlin-gradle-plugin = { module = "org.jetbrains.kotlin.jvm:org.jetbrains.kotlin.jvm.gradle.plugin", version.ref = "kotlin" }
 kotlinter-gradle-plugin = { module = "org.jmailen.kotlinter:org.jmailen.kotlinter.gradle.plugin", version.ref = "kotlinter" }
-kotlin-snowflake = { module = "io.github.crispindeity:kotlin-snowflake", version.ref = "kotlin-snowfalke"}
+kotlin-snowflake = { module = "io.github.crispindeity:kotlin-snowflake", version.ref = "kotlin-snowfalke" }
 kotlin-serialization-json = { module = "org.jetbrains.kotlinx:kotlinx-serialization-json", version.ref = "kotlin-serialization" }
 kotlin-reflect = { module = "org.jetbrains.kotlin:kotlin-reflect", version.ref = "kotlin" }
-spring-boot-starter-validation = { module = "org.springframework.boot:spring-boot-starter-validation", version.ref = "spring-boot"}
+spring-boot-starter-validation = { module = "org.springframework.boot:spring-boot-starter-validation", version.ref = "spring-boot" }
+spring-boot-starter-data-jpa = { module = "org.springframework.boot:spring-boot-starter-data-jpa", version.ref = "spring-boot" }
+h2-database = { module = "com.h2database:h2", version.ref = "h2-database" }
 
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
@@ -30,10 +33,12 @@ kotlin-linter = { id = "org.jmailen.kotlinter", version.ref = "kotlinter" }
 spring-boot = { id = "org.springframework.boot", version.ref = "spring-boot" }
 kotlin-plugin-spring = { id = "org.jetbrains.kotlin.plugin.spring", version.ref = "kotlin" }
 spring-dependency-management = { id = "io.spring.dependency-management", version.ref = "spring-dependency-management" }
-kotlin-snowflake = { id = "kotlin.snowflake"}
+kotlin-snowflake = { id = "kotlin.snowflake" }
 kotlin-plugin-serialization = { id = "org.jetbrains.kotlin.plugin.serialization", version.ref = "kotlin" }
+kotlin-jpa = { id = "org.jetbrains.kotlin.plugin.jpa", version.ref = "kotlin" }
 
 #root
 jvm-library = { id = "jvm.library" }
-kotlin-spring-web = { id = "kopring.web.library"}
+kotlin-spring-web = { id = "kopring.web.library" }
 kotlin-spring-service = { id = "kopring.service.library" }
+kotlin-spring-data-jpa = { id = "kopring.data.jpa.library" }
