--- a/lab-article/src/main/resources/application-local.yml
+++ b/lab-article/src/main/resources/application-local.yml
@@ -8,6 +8,7 @@ spring:
   sql:
     init:
       mode: always
+      schema-locations: classpath:sql/schema.sql
   datasource:
     url: 'jdbc:h2:mem:test;MODE=Postgresql;'
     username: 'sa'
