--- a/gradle/libs.versions.toml
+++ b/gradle/libs.versions.toml
@@ -7,6 +7,7 @@ spring-dependency-management = "1.1.7"
 kotlin-snowfalke = "0.0.5"
 kotlin-serialization = "1.8.0"
 h2-database = "2.3.232"
+rest-assured = "5.5.1"
 
 [libraries]
 # build-logic
@@ -26,6 +27,7 @@ kotlin-reflect = { module = "org.jetbrains.kotlin:kotlin-reflect", version.ref =
 spring-boot-starter-validation = { module = "org.springframework.boot:spring-boot-starter-validation", version.ref = "spring-boot" }
 spring-boot-starter-data-jpa = { module = "org.springframework.boot:spring-boot-starter-data-jpa", version.ref = "spring-boot" }
 h2-database = { module = "com.h2database:h2", version.ref = "h2-database" }
+rest-assured = { module = "io.rest-assured:rest-assured", version.ref = "rest-assured"}
 
 [plugins]
 kotlin-jvm = { id = "org.jetbrains.kotlin.jvm", version.ref = "kotlin" }
